commit code to Group 1 - step 2 update bag DB and UI box for frist login